--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <header class="page-header page-header--active">
         <div class="page-header__nav-wrap">
             <div class="menu-header">
-               <div class="page-header__logo-wrap">
+                <div class="page-header__logo-wrap">
                   <a href="/" class="page-header__logo-link">
                     <img src="img/logo.svg" alt="Pink logo">
                   </a>
-               </div>
+                </div>
               <nav class="main-nav">
                   <div class="wrapper-flex">
                       <ul class="main-nav__list site-list">
@@ -47,9 +47,8 @@
                         <li class="os-list__item"></li>
                     </ul>
                     <h2 class="os-nav__title">Доступно для iPhone, iPad, Android,
-              Windows Phone, OS X, Windows 8</h2>
+              <br class="separator separator--mobile">Windows Phone, OS X, Windows 8</h2>
                 </div>
-            </div>''
         </section>
     </header>
     <main class="container">
@@ -70,23 +69,24 @@
                     </section>
                     <section class="features-items__block">
                         <h2 class="features-items__title">Меняем мир вокруг</h2>
-                        <p class="features-items__descr">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы<br class="separator">усилить эффект</p>
+                        <p class="features-items__descr">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
                     </section>
                     <section class="features-items__block">
                         <h2 class="features-items__title">Заводит  <br class="separator-desktop"> новых друзей</h2>
-                        <p class="features-items__descr">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых </p>
+                        <p class="features-items__descr">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и <br class="separator separator--mobile"> заводите новых </p>
                     </section>
                     </div>
                     <div class="features-items__image-wrap">
-                      <img src="img/iphone-screen-mobile.png" width="140" height="289">
+                      <img src="img/iphone-screen-mobile.png" alt="Iphone photo" width="140" height="324">
                     </div>
                     <section class="features-items__block mobile_hidden">
-                      <h2 class="features-items__title--custom_size">Эффект<br class="separator"> на 24 часа!</h2>
-                      <p class="features-items__descr features-items__descr--custom_description">Британские ученые провели исследования и доказали,<br class="separator-desktop">что положительный эффект<br class="separator">от использования приложения длится<br class="separator">целые сутки!</p>
+                      <h2 class="features-items__title--custom_size">Эффект<br class="separator separator--mobile separator--tablet"> на 24 часа!</h2>
+                      <p class="features-items__descr features-items__descr--custom_description">Британские ученые провели исследования и доказали,<br class="separator-desktop">что положительный эффект от использования приложения длится <br class="separator separator--tablet">целые сутки!</p>
                       <a class="features-items__link">Узнать больше об исследовании</a>
                     </section>
                 </div>
           </div>
+        </div>
         </div>
         <section class="reviews">
             <h2 class="slider-reviews__header visually_hidden">Блок отзывов о приложении Pink</h2>
@@ -94,7 +94,7 @@
                 <article class="slider-reviews">
                     <h2 class="slider-reviews__header visually_hidden">Блок отзывов о приложении Pink</h2>
                     <div class="slider-reviews__text">&laquo;Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&raquo;</div>
-                    <h2 class="slider-reviews__header">Николай Петров <br class="separator"><br class="separator-desktop"><span>25 лет, водитель трамвая</span></h2>
+                    <h2 class="slider-reviews__header">Николай Петров <br class="separator"> <span>25 лет, водитель трамвая</span></h2>
                 </article>
                 <div class="slider-reviews__pagination">
                     <span class="slider-reviews__pagination-item--active"></span>
@@ -110,7 +110,7 @@
             <div class="wrapper">
             <table class="traffic-table">
                 <thead class="traffic-table__head">
-                   <tr>
+                    <tr>
                     <th class="traffic-table_headcell traffic-table_headcell--no-borders"></th>
                     <th class="traffic-table_headcell">
                     <p class="price-table__headcell-type">База</p>
@@ -125,27 +125,27 @@
                     <p class="price-table__headcell-price">9,99 USD</p>
                     </th>
                     </tr>
+                </thead>
                     <tbody class="traffic-table__body">
                     <tr class="traffic-table__row">
                     <td class="traffic-table__cell">Розовый фильтр</td>
                     <td class="traffic-table__cell traffic-table__cell--yes">Розовый фильтр</td>
-                    <td class="traffic-table__cell traffic-table__cell--yes">Розовый фильтр</td>
+                    <td class="traffic-table__cell traffic-table__cell--yes  traffic-table__cell--mobile">Розовый фильтр</td>
                     <td class="traffic-table__cell traffic-table__cell--yes">Розовый фильтр</td>
                     </tr>
-                     <tr class="traffic-table__row">
+                      <tr class="traffic-table__row">
                     <td class="traffic-table__cell">Смайлики</td>
                     <td class="traffic-table__cell  traffic-table__cell--no">Розовый фильтр</td>
-                    <td class="traffic-table__cell traffic-table__cell--no">Розовый фильтр</td>
+                    <td class="traffic-table__cell traffic-table__cell--no traffic-table__cell--mobile">Смайлики</td>
                     <td class="traffic-table__cell traffic-table__cell--yes">Розовый фильтр</td>
                     </tr>
-                     <tr class="traffic-table__row">
+                      <tr class="traffic-table__row">
                     <td class="traffic-table__cell">Комментарии</td>
                     <td class="traffic-table__cell traffic-table__cell--no">Розовый фильтр</td>
-                    <td class="traffic-table__cell traffic-table__cell--no">Розовый фильтр</td>
+                    <td class="traffic-table__cell traffic-table__cell--no traffic-table__cell--mobile">Комментарии</td>
                     <td class="traffic-table__cell traffic-table__cell--no">Розовый фильтр</td>
                     </tr>
                     </tbody>
-                    </thead>
                 </table>
             <div class="slider-reviews__pagination">
                 <span class="slider-reviews__pagination-item--active"></span>
@@ -157,7 +157,7 @@
         <section class="info-block">
             <h2 class="visually_hidden">Контактные данные</h2>
             <div class="wrapper-flex">
-                <h2 class="info-block__text">Остались вопросы?<br class="separator"><br class="separator-desktop">Свяжитесь с нами!</h2>
+                <h2 class="info-block__text">Остались вопросы?<br class="separator"> Свяжитесь с нами!</h2>
                 <div class="info-block__contacts">
                     <div class="info-block__call-block">
                         <p class="phone__text">Звоните:</p>
@@ -172,9 +172,9 @@
             <div class="map-block">
                 <div class="wrapper-flex">
                     <p class="map-block__text">Приезжайте в гости:</p>
-                    <address><a class="map-block__link" href="#">ул.Большая <br class="separator"><br class="separator-desktop">Конюшенная, 19/8</a></address>
+                    <address><a class="map-block__link" href="#">ул.Большая <br class="separator">Конюшенная, 19/8</a></address>
                     <div class="map-block_map-item">
-                      <img src="img/bg-map-mobile@1x.png" width="300" height="300">
+                      <img src="img/bg-map-mobile@1x.png" alt="Карта" width="300" height="300">
                     </div>
                 </div>
             </div>
