--- a/photo.html
+++ b/photo.html
@@ -3,6 +3,7 @@
 <head>
 <title>Pink site</title>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="js/script.min.js"></script>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="stylesheet" href="img/sprite.svg" type="image/svg+xml">
@@ -40,18 +41,15 @@
         <h2 class="user-blogs__text">Взгляните на фотографии, которые выкладывают пользователи!<br class="mobile-separator mobile-separator--desktop">Видите, как не хватает ваших?</h2>
     </section>
     </div>
-   <!--  <div class="blog-post"> -->
-   <div class="panorama-blog">
-    <!-- <article class="blog-post__item"> -->
+    <div class="panorama-blog">
     <article class="panorama-blog__item">
           <h2 class="visually_hidden">Фотографии пользователей социальной сети</h2>
-          <!-- <figure class="blog-post__image panorama"> -->
-           <figure class="panorama-blog__image">
+            <figure class="panorama-blog__image">
             <img src="img/panorama-mobile.jpg" width="320" height="137" class="mobile-img" alt="Фотография пользователя из социальной сети">
-             <img src="img/panorama-mobile.jpg" width="700" height="513" class="temp-img" alt="Фотография пользователя из социальной сети">
-            <span class="special-icon">Панорама дня</span>
-          </figure>
-    </article>
+              <img src="img/panorama-mobile.jpg" width="700" height="513" class="temp-img" alt="Фотография пользователя из социальной сети">
+              <span class="special-icon">Панорама дня</span>
+            </figure>
+      </article>
     <div class="wrapper">
           <div class="blog-post__body panorama-body">
           <header class="panorama-header">
@@ -164,10 +162,10 @@
             <figure class="blog-post__image">
               <img src="img/photo-wing-mobile.jpg" width="280" height="180" alt="Фотография пользователя из социальной сети" class="mobile-photo">
             </figure>
-             <div class="blog-post__body">
+              <div class="blog-post__body">
             <header class="blog-header">
               <h2 class="blog-post__header">Надежда</h2>
-              <span class="time-tamp">(45 часов назад)</span>
+                <span class="time-tamp">(45 часов назад)</span>
             </header>
             <p class="blog-post__text">Всем GM и взаимные лайки!</p>
             <footer class="blog-post__info blog-post__info--photo">
@@ -177,10 +175,10 @@
             </footer>
           </div>
         </article>
-   </div>
+    </div>
     <section class="describe-block">
       <h2 class="visually_hidden">Промо-текст</h2>
-        <h2 class="describe-block__text">Затмите их всех!<br class="separator-desktop"><br class="separator-tablet">Выкладывайте все, что накопилось в телефоне!</h2>
+          <h2 class="describe-block__text">Затмите их всех!<br class="separator-desktop"><br class="separator-tablet">Выкладывайте все, что накопилось в телефоне!</h2>
     </section>
     <div class="editor-block">
       <div class="wrapper-flex image-editor">
@@ -212,10 +210,10 @@
             </dd>
             <dt class="image-editor__tools image-editor__tools--fill">
             </dt>
-             <dd class="controls controls--fill">
+              <dd class="controls controls--fill">
               <div class="filter-range">
                 <h2 class="filter-range__title visually_hidden">Редактор фото</h2>
-                    <div class="filter-controls">
+                      <div class="filter-controls">
                         <form action="https://echo.htmlacademy.ru" method="GET">
                         <label class="filter-controls__min-range">от<input type="text" name="min-price" value="0"></label>
                         <label class="filter-controls__max-range">до<input type="text" name="max-price" value="3000"></label>
@@ -233,7 +231,7 @@
             </dd>
             <dt class="image-editor__tools image-editor__tools--contrast">
             </dt>
-             <dd class="controls controls--contrast">
+              <dd class="controls controls--contrast">
               <div class="filter-range">
                 <h2 class="filter-range__title visually_hidden">Редактор фото</h2>
                     <div class="filter-controls">
@@ -254,10 +252,10 @@
             </dd>
             </dl>
             <div class="buttons-block">
-             <input class="editor-block__button editor-block__button--submit" type="submit" value="Запостить">
+              <input class="editor-block__button editor-block__button--submit" type="submit" value="Запостить">
             <input class="editor-block__button  editor-block__button--disable" type="reset" value="Отмена">
             </div>
-            </div>
+              </div>
             </div>
             <!-- <div class="filter-range">
                 <h2 class="filter-range__title visually_hidden">Редактор фото</h2>
