--- a/form.html
+++ b/form.html
@@ -1,95 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Pink user form</title>
-<meta charset="UTF-8">
-<script src="js/script.min.js"></script>
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="img/sprite.svg" type="image/svg+xml">
+  <title>Pink user form</title>
+  <meta charset="UTF-8">
+  <script src="js/script.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="img/sprite.svg" type="image/svg+xml">
 </head>
 <body>
-  <header class="page-header page-header--active">
-        <div class="page-header__nav-wrap">
-            <div class="menu-header">
-                <div class="page-header__logo-wrap">
-                  <a href="/" class="page-header__logo-link">
-                    <img src="img/logo.svg" alt="Pink logo">
-                  </a>
-                </div>
-              <nav class="main-nav">
-                  <div class="wrapper-flex">
-                      <ul class="main-nav__list site-list">
-                          <li class="main-nav__items main-nav__items--active"><a href="#">Главная</a></li>
-                          <li class="main-nav__items"><a href="#">Фотографии</a></li>
-                          <li class="main-nav__items"><a href="#">Конкурс</a></li>
-                          <li class="main-nav__items"><a href="#">HTML ACADEMY</a></li>
-                      </ul>
-                      <a href="#" class="main-nav__toggle main-nav__toggle--close"></a>
-                  </div>
-              </nav>
-        </div>
-        </div>
-        <section class="form-section">
-          <div class="wrapper-flex">
-            <h2 class="visually_hidden">Выбор операционной системы для скачивания приложения Pink</h2>
-            <h2 class="form-section__text">Конкурс на самое безбашенное путешествие с Пинк</h2>
-          </div>
-        </section>
-        </header>
-  <main class="container">
-    <section class="info-user">
-      <h2 class="visually_hidden">Условия конкурса приложения Pink</h2>
-      <div class="wrapper">
-        <p class="info-user__text">Поделитесь своей историей и получите шанс выиграть ценный приз &mdash; 1000 <br class="separator__form-text"> миль на вашу бонусную карту!<span class="info-user__text--mobile-hidden"><br class="separator__form-text separator__form-text--desktop">Пожалуйста, заполните форму ниже:</span></p>
+<header class="page-header page-header--active page-header--form">
+  <div class="page-header__nav-wrap">
+    <div class="menu-header">
+      <div class="page-header__logo-wrap">
+        <a href="/" class="page-header__logo-link">
+          <img src="img/logo.svg" alt="Pink logo">
+        </a>
       </div>
-    </section>
-    <form class="user-form" method="get" action="https://echo.htmlacademy.ru/adaptive">
-      <section class="input-form">
+      <nav class="main-nav">
+        <div class="wrapper-flex">
+          <ul class="main-nav__list site-list">
+            <li class="main-nav__items main-nav__items--active"><a href="#">Главная</a></li>
+            <li class="main-nav__items"><a href="#">Фотографии</a></li>
+            <li class="main-nav__items"><a href="#">Конкурс</a></li>
+            <li class="main-nav__items"><a href="#">HTML ACADEMY</a></li>
+          </ul>
+          <a href="#" class="main-nav__toggle main-nav__toggle--close"></a>
+        </div>
+      </nav>
+    </div>
+  </div>
+  <section class="form-section">
+    <div class="wrapper-flex">
+      <h2 class="visually_hidden">Выбор операционной системы для скачивания приложения Pink</h2>
+      <h2 class="form-section__text">Конкурс на самое безбашенное путешествие с Пинк</h2>
+    </div>
+  </section>
+</header>
+<main class="container">
+  <section class="info-user">
+    <h2 class="visually_hidden">Условия конкурса приложения Pink</h2>
+    <div class="wrapper">
+      <p class="info-user__text">Поделитесь своей историей и получите шанс выиграть <br
+        class="separator__form-text separator__form-text--tablet"> ценный приз
+        &mdash; 1000 <br class="separator__form-text"> миль на вашу бонусную карту!<span
+          class="info-user__text--mobile-hidden"><br
+          class="separator__form-text separator__form-text--desktop separator__form-text--tablet">Пожалуйста, заполните форму ниже:</span>
+      </p>
+    </div>
+  </section>
+  <form class="user-form" method="get" action="https://echo.htmlacademy.ru/adaptive">
+    <section class="input-form">
+      <h2 class="visually_hidden">Формы для ввода данных приложения Pink</h2>
+      <section class="wrapper-flex user-forms">
         <h2 class="visually_hidden">Формы для ввода данных приложения Pink</h2>
-        <section class="wrapper-flex user-forms">
-          <h2 class="visually_hidden">Формы для ввода данных приложения Pink</h2>
-          <div class="input-block__form">
-              <label for="input_surname" class="input-form__input-label">
-                Фамилия
-              </label>
-                <input type="text" class="input-form__input" required placeholder="Укажите фамилию *" id="input_surname">
-          </div>
-          <div class="input-block__form">
-              <label for="input_name" class="input-form__input-label">
-                Имя
-              </label>
-                <input type="text" class="input-form__input input-form__input-label--short_letters" required placeholder="Введите имя *" id="input_name">
-          </div>
-          <div class="input-block__form">
-              <label for="input_surname-mobile" class="input-form__input-label">
-                Отчество
-              </label>
-              <input type="text" class="input-form__input" placeholder="Ну и отчество тоже" id="input_surname-mobile">
-          </div>
-        </section>
+        <div class="input-block__form">
+          <label for="input_surname" class="input-form__input-label">
+            Фамилия
+          </label>
+          <input type="text" class="input-form__input" required placeholder="Укажите фамилию *" id="input_surname">
+        </div>
+        <div class="input-block__form">
+          <label for="input_name" class="input-form__input-label">
+            Имя
+          </label>
+          <input type="text" class="input-form__input input-form__input-label--short_letters" required
+                  placeholder="Введите ваше имя *" id="input_name">
+        </div>
+        <div class="input-block__form">
+          <label for="input_surname-mobile" class="input-form__input-label">
+            Отчество
+          </label>
+          <input type="text" class="input-form__input" placeholder="Ну и отчество тоже" id="input_surname-mobile">
+        </div>
       </section>
-      <section class="achievments-page">
-        <h2 class="visually_hidden">Формы для ввода данных приложения Pink</h2>
-        <div class="wrapper-flex form form--achievments-page">
-          <p class="achievments-page__text">Ваши безбашенные достижения в путешествии</p>
-          <div class="catalog-checkbox">
+    </section>
+    <section class="achievments-page">
+      <h2 class="visually_hidden">Формы для ввода данных приложения Pink</h2>
+      <div class="wrapper-flex form form--achievments-page">
+        <p class="achievments-page__text">Ваши безбашенные достижения в путешествии</p>
+        <div class="catalog-checkbox">
           <div class="checkbox-group">
-            <input type="checkbox" checked class="catalog-checkbox__input catalog-checkbox__input--active" id="checkbox">
+            <input type="checkbox" checked class="catalog-checkbox__input catalog-checkbox__input--active"
+                    id="checkbox">
             <label for="checkbox" class="catalog-checkbox__label catalog-checkbox__label--active">
-            Сделал селфи с акулой
+              Сделал селфи с акулой
             </label>
             <br>
-            <input type="checkbox" checked class="catalog-checkbox__input catalog-checkbox__input--active" id="checkbox_beach">
+            <input type="checkbox" checked class="catalog-checkbox__input catalog-checkbox__input--active"
+                    id="checkbox_beach">
             <label for="checkbox_beach" class="catalog-checkbox__label">
-            Обгорел на пляже
+              Обгорел на пляже
             </label>
-            </div>
-            <br>
-            <div class="checkbox-group">
+          </div>
+          <br>
+          <div class="checkbox-group">
             <input type="checkbox" class="catalog-checkbox__input" id="checkbox_seen">
             <label for="checkbox_seen" class="catalog-checkbox__label">
-            Видел Чака Норриса
+              Видел Чака Норриса
             </label>
             <br>
             <input type="checkbox" class="catalog-checkbox__input" id="checkbox_souvenirs">
@@ -97,86 +105,88 @@
               Накупил сувениров
             </label>
             <br>
-            </div>
-            <div class="checkbox-group">
-              <input type="checkbox" checked class="catalog-checkbox__input" id="checkbox_keep-castle">
-            <label for = "checkbox_keep-castle" class="catalog-checkbox__label">
-                  Удержал башню
-              </label>
-              <br>
-              <input type="checkbox" class="catalog-checkbox__input" id="crash_hotel">
-              <label  for="crash_hotel" class="catalog-checkbox__label">
-                  Разгромил отель
-              </label>
           </div>
-          </div>
-          </div>
-      </section>
-      <section class="user-address">
-        <h2 class="visually_hidden">Контактные данные приложения Pink</h2>
-          <div class="wrapper-flex form__user-contacts">
-            <p class="user-contacts__text user-contacts__text--mobile_hidden">Контактная информация</p>
-            <div class="label-block label-block--phone">
-            <label for="input_number" class="user-contacts__label phone_number">
-              Номер телефона
-              </label>
-              <input type="text" class="user-contacts__input table_hidden" placeholder ="Номер, пожалуйста" id="input_number">
-              <input type="text" placeholder ="+7 ХХХ ХХХ-ХХ-ХХ" class="user-contacts__input--mobile_hidden input_number" id="input_number-mobile">
+          <div class="checkbox-group">
+            <input type="checkbox" checked class="catalog-checkbox__input" id="checkbox_keep-castle">
+            <label for="checkbox_keep-castle" class="catalog-checkbox__label">
+              Удержал башню
+            </label>
             <br>
-            </div>
-            <div class="label-block label-block--mail">
-            <label for="input_address" class="user-contacts__label mail_address">
-              Адрес почты
+            <input type="checkbox" class="catalog-checkbox__input" id="crash_hotel">
+            <label for="crash_hotel" class="catalog-checkbox__label">
+              Разгромил отель
             </label>
-              <input type="text" placeholder ="Введите почту *" class="user-contacts__input input_mail" id="input_address">
-          </div>
-          </div>
-      </section>
-      <section class="os-choice">
-        <h2 class="visually_hidden">Формы для ввода данных приложения Pink</h2>
-        <div class="wrapper-flex form">
-          <p class="os-choice__text">С каким приложением путешествовали?</p>
-          <div class="radio-buttons-group">
-            <input type="radio" id="radio-select" class="radio-button-group__input">
-            <label for="radio-select" class="radio-buttons-group__label">
-              Pink для ios
-            </label>
-            <div class="radio-select__check"></div>
-            <br>
-            <input type="radio" id="radio-select_android" class="radio-button-group__input">
-            <label for="radio-select_android" class="radio-buttons-group__label">
-              Pink на Android
-            </label>
-            <div class="radio-select__check"></div>
-            <br>
-            <input type="radio" id="radio-select_windows" class="radio-button-group__input">
-            <label for="radio-select_windows" class="radio-buttons-group__label">
-              Windows Phone
-            </label>
-            <div class="radio-select__check"></div>
           </div>
         </div>
-      </section>
-      <section class="form-describe">
-        <h2 class="visually_hidden">Формы для ввода данных приложения Pink</h2>
-        <div class="wrapper-flex form form--feedback">
-          <h2 class="form-describe__text">Опишите свои эмоции</h2>
-          <div class="form-container">
-          <textarea name="feedback" cols="30" rows="5" class="form-section__text-area" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
-          </div>
+      </div>
+    </section>
+    <section class="user-address">
+      <h2 class="visually_hidden">Контактные данные приложения Pink</h2>
+      <div class="wrapper-flex form__user-contacts">
+        <p class="user-contacts__text user-contacts__text--mobile_hidden">Контактная информация</p>
+        <div class="label-block label-block--phone">
+          <label for="input_number" class="user-contacts__label phone_number">
+            Номер телефона
+          </label>
+          <input type="text" class="user-contacts__input phone_number" placeholder="Номер, пожалуйста"
+                  id="input_number">
           <br>
-          <div class="button-group">
-          <button type="submit" value="1" class="form-describe__button-submit"><span>Отправить форму</span></button>
-          <br>
-          <small class="form-describe__small-notice"><span>*</span>&mdash;обязательные поля</small>
-          <small class="form-describe__small-notice--only-desktop"><span>*</span>&mdash;обязательные для заполнения поля</small>
-          </div>
         </div>
-      </section>
-    </form>
-  </main>
-  <footer class="page-shown-footer">
-    <div class="wrapper">
+        <div class="label-block label-block--mail">
+          <label for="input_address" class="user-contacts__label mail_address">
+            Адрес почты
+          </label>
+          <input type="text" placeholder="Введите почту *" class="user-contacts__input input_mail" id="input_address">
+        </div>
+      </div>
+    </section>
+    <section class="os-choice">
+      <h2 class="visually_hidden">Формы для ввода данных приложения Pink</h2>
+      <div class="wrapper-flex form">
+        <p class="os-choice__text">С каким приложением путешествовали?</p>
+        <div class="radio-buttons-group">
+          <input type="radio" id="radio-select" class="radio-button-group__input">
+          <label for="radio-select" class="radio-buttons-group__label">
+            Pink для ios
+          </label>
+          <div class="radio-select__check"></div>
+          <br>
+          <input type="radio" id="radio-select_android" class="radio-button-group__input">
+          <label for="radio-select_android" class="radio-buttons-group__label">
+            Pink на Android
+          </label>
+          <div class="radio-select__check"></div>
+          <br>
+          <input type="radio" id="radio-select_windows" class="radio-button-group__input">
+          <label for="radio-select_windows" class="radio-buttons-group__label">
+            Windows Phone
+          </label>
+          <div class="radio-select__check"></div>
+        </div>
+      </div>
+    </section>
+    <section class="form-describe">
+      <h2 class="visually_hidden">Формы для ввода данных приложения Pink</h2>
+      <div class="wrapper-flex form form--feedback">
+        <h2 class="form-describe__text">Опишите свои эмоции</h2>
+        <div class="form-container">
+          <textarea name="feedback" cols="30" rows="5" class="form-section__text-area"
+                    placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+        </div>
+        <br>
+      </div>
+      <div class="button-group">
+        <button type="submit" value="1" class="form-describe__button-submit"><span>Отправить форму</span></button>
+        <br>
+        <small class="form-describe__small-notice"><span>*</span>&mdash;обязательные поля</small>
+        <small class="form-describe__small-notice--only-desktop"><span>*</span>&mdash;обязательные для заполнения поля
+        </small>
+      </div>
+    </section>
+  </form>
+</main>
+<footer class="page-shown-footer">
+  <div class="wrapper">
     <div class="page-shown-footer__container">
       <section class="page-shown-footer__img-wrap">
         <h2 class="visually_hidden">Свяжитесь с нами</h2>
@@ -195,21 +205,22 @@
         <a href="#"><img src="img/htmllogo" alt="HTML academy logo"></a>
       </section>
     </div>
-    </div>
-  </footer>
-  <div class="popup">
-    <div class="wrapper-flex">
-      <h2 class="popup__header">Что-то пошло не так!</h2>
-      <p class="popup__text">Проверьте поля,выделенные красным, скорее всего вы забыли их заполнить</p>
-      <button type="button" value="1" class="popup__button-submit">ОК</button>
-    </div>
   </div>
-  <div class="popup">
-    <div class="wrapper-flex">
-      <h2 class="popup__header">Ваша заявка отправлена</h2>
-      <p class="popup__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
-      <button type="button" value="1" class="popup__button-submit">Закрыть окно</button>
-    </div>
+</footer>
+<div class="popup">
+  <div class="wrapper-flex">
+    <h2 class="popup__header">Что-то пошло не так!</h2>
+    <p class="popup__text">Проверьте поля,выделенные красным, скорее всего вы забыли их заполнить</p>
+    <button type="button" value="1" class="popup__button-submit">ОК</button>
   </div>
+</div>
+<div class="popup">
+  <div class="wrapper-flex">
+    <h2 class="popup__header">Ваша заявка отправлена</h2>
+    <p class="popup__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее
+      и оповестим вас.</p>
+    <button type="button" value="1" class="popup__button-submit">Закрыть окно</button>
+  </div>
+</div>
 </body>
 </html>
