--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
   </section>
   <section class="promo-download">
     <h2 class="visually_hidden">Выбор операционной системы для скачивания приложения PInk</h2>
-    <div class="promo-download__button">
-      <a href="#">Скачать приложение</a>
-    </div>
+      <a class="promo-download__button" href="#">Скачать приложение</a>
     <div class="promo-download__links">
       <ul class="os-nav os-list">
         <li class="os-list__item"></li>
