--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
-<header class="page-header page-header--active">
+<header class="page-header">
   <div class="wrapper-flex">
-    <nav class="main-nav">
+    <nav class="main-nav main-nav--opened main-nav--nojs">
       <button class="main-nav__toggle">
       </button>
       <ul class="main-nav__list site-list">
-        <li class="main-nav__items main-nav__items--active"><a href="#">Главная</a></li>
+        <li class="main-nav__items main-nav__items--active"><a>Главная</a></li>
         <li class="main-nav__items"><a href="#">Фотографии</a></li>
         <li class="main-nav__items"><a href="#">Конкурс</a></li>
         <li class="main-nav__items"><a href="#">HTML Academy</a></li>
@@ -24,7 +24,7 @@
     </nav>
   </div>
   <div class="page-header__nav-wrap">
-    <div class="menu-header">
+    <div class="menu-header menu-header--active">
       <div class="page-header__logo-wrap">
         <a href="/" class="page-header__logo-link">
           <img src="img/logo.svg" alt="Pink logo">
