adding pics for retina mobile and desktop

--- a/photo.html
+++ b/photo.html
@@ -51,11 +51,14 @@
     <article class="panorama-blog__item">
       <h2 class="visually_hidden">Фотографии пользователей социальной сети</h2>
       <figure class="panorama-blog__image">
-        <img src="img/panorama-mobile.jpg" width="320" height="137" class="mobile-img"
-                alt="Фотография пользователя из социальной сети">
-        <img src="img/panorama-mobile.jpg" width="700" height="513" class="temp-img"
-                alt="Фотография пользователя из социальной сети">
-        <span class="special-icon">Панорама дня</span>
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/panorama-desktop@1x.jpg 1x, img/panorama-desktop@2x.jpg 2x">
+          <source media="(min-width: 660px)" srcset="img/panorama-tablet@1x.jpg 1x, img/panorama-tablet@2x.jpg 2x"
+                  alt="Фотография пользователя">
+          <img src="img/panorama-mobile.jpg" srcset="img/panorama-mobile@2x.jpg 2x"
+               alt="Фотография пользователя из социальной сети">
+          <span class="special-icon">Панорама дня</span>
+        </picture>
       </figure>
     </article>
     <div class="wrapper">
@@ -79,7 +82,7 @@
       <h2 class="visually_hidden">Фотографии пользователей социальной сети</h2>
       <figure class="blog-post__image">
         <img src="img/photo-car-mobile.jpg" width="280" height="182" alt="Фотография пользователя из социальной сети"
-                class="mobile-photo">
+             class="mobile-photo">
       </figure>
       <div class="blog-post__body">
         <header class="blog-header">
@@ -98,7 +101,7 @@
       <h2 class="visually_hidden">Фотографии пользователей социальной сети</h2>
       <figure class="blog-post__image">
         <img src="img/photo-drumset-mobile.jpg" width="280" height="180"
-                alt="Фотография пользователя из социальной сети" class="mobile-photo">
+             alt="Фотография пользователя из социальной сети" class="mobile-photo">
       </figure>
       <div class="blog-post__body">
         <header class="blog-header">
@@ -117,7 +120,7 @@
       <h2 class="visually_hidden">Фотографии пользователей социальной сети</h2>
       <figure class="blog-post__image">
         <img src="img/photo-window-mobile.jpg" width="280" height="180" alt="Фотография пользователя из социальной сети"
-                class="mobile-photo">
+             class="mobile-photo">
       </figure>
       <div class="blog-post__body">
         <header class="blog-header">
@@ -137,7 +140,7 @@
         ии пользователей социальной сети</h2>
       <figure class="blog-post__image">
         <img src="img/photo-fair-mobile.jpg" width="280" height="180" alt="Фотография пользователя из социальной сети"
-                class="mobile-photo">
+             class="mobile-photo">
       </figure>
       <div class="blog-post__body">
         <header class="blog-header">
@@ -156,7 +159,7 @@
       <h2 class="visually_hidden">Фотографии пользователей социальной сети</h2>
       <figure class="blog-post__image">
         <img src="img/photo-pov-mobile.jpg" width="280" height="180" alt="Фотография пользователя из социальной сети"
-                class="mobile-photo">
+             class="mobile-photo">
       </figure>
       <div class="blog-post__body">
         <header class="blog-header">
@@ -175,7 +178,7 @@
       <h2 class="visually_hidden">Фотографии пользователей социальной сети</h2>
       <figure class="blog-post__image">
         <img src="img/photo-wing-mobile.jpg" width="280" height="180" alt="Фотография пользователя из социальной сети"
-                class="mobile-photo">
+             class="mobile-photo">
       </figure>
       <div class="blog-post__body">
         <header class="blog-header">
@@ -200,7 +203,7 @@
     <div class="wrapper-flex image-editor">
       <div class="image-editor__image-block">
         <img src="img/photo-road-mobile.jpg" width="280" height="375" alt="Фотография для редактирования"
-                class="mobile-photo">
+             class="mobile-photo">
       </div>
       <div class="image-editor__tools">
         <dl class="image-editor__tools-list">
