--- a/photo.html
+++ b/photo.html
@@ -16,7 +16,7 @@
       <button class="main-nav__toggle">
       </button>
       <ul class="main-nav__list site-list">
-        <li class="main-nav__items main-nav__items--active"><a>Главная</a></li>
+        <li class="main-nav__items"><a>Главная</a></li>
         <li class="main-nav__items"><a href="#">Фотографии</a></li>
         <li class="main-nav__items"><a href="#">Конкурс</a></li>
         <li class="main-nav__items"><a href="#">HTML Academy</a></li>
@@ -28,7 +28,11 @@
     <div class="menu-header menu-header--active">
       <div class="page-header__logo-wrap">
         <a href="/" class="page-header__logo-link">
-          <img src="img/logo.svg" alt="Pink logo">
+          <picture>
+            <source media="(min-width: 1200px" srcset="img/logo-pink-white-desktop.svg">
+            <source media="(min-width:660px)" srcset="img/logo-pink-white-tablet.svg">
+            <img src="img/logo-pink-white-mobile.svg" width="76" height="27" class="logo-pic" alt="Pink logo">
+          </picture>
         </a>
       </div>
     </div>
@@ -52,10 +56,10 @@
       <h2 class="visually_hidden">Фотографии пользователей социальной сети</h2>
       <figure class="panorama-blog__image">
         <picture>
-          <source media="(min-width: 1200px)" srcset="img/panorama-desktop@1x.jpg 1x, img/panorama-desktop@2x.jpg 2x">
+          <source media="(min-width: 960px)" srcset="img/panorama-desktop@1x.jpg 1x, img/panorama-desktop@2x.jpg 2x">
           <source media="(min-width: 660px)" srcset="img/panorama-tablet@1x.jpg 1x, img/panorama-tablet@2x.jpg 2x"
                   alt="Фотография пользователя">
-          <img src="img/panorama-mobile.jpg" srcset="img/panorama-mobile@2x.jpg 2x"
+          <img src="img/panorama-mobile@1x.jpg" srcset="img/panorama-mobile@1x.jpg 1x, img/panorama-mobile@2x.jpg 2x"
                alt="Фотография пользователя из социальной сети">
           <span class="special-icon">Панорама дня</span>
         </picture>
@@ -81,8 +85,14 @@
     <article class="blog-post">
       <h2 class="visually_hidden">Фотографии пользователей социальной сети</h2>
       <figure class="blog-post__image">
-        <img src="img/photo-car-mobile.jpg" width="280" height="182" alt="Фотография пользователя из социальной сети"
-             class="mobile-photo">
+        <picture>
+          <source media="(min-width: 960px)" srcset="img/photo-car-desktop@1x.jpg 1x, img/photo-car-desktop@2x.jpg 2x"
+                  alt="Фотография пользователя">
+          <source media="(min-width: 660px)" srcset="img/photo-car-tablet@1x.jpg 1x, img/photo-car-tablet@2x.jpg 2x"
+                  alt="Фотография пользователя">
+          <img src="img/photo-car-mobile.jpg" srcset="img/photo-car-mobile.jpg 1x, img/photo-car-mobile@2x.jpg 2x"
+               alt="Фотография пользователя из социальной сети">
+        </picture>
       </figure>
       <div class="blog-post__body">
         <header class="blog-header">
@@ -100,8 +110,17 @@
     <article class="blog-post">
       <h2 class="visually_hidden">Фотографии пользователей социальной сети</h2>
       <figure class="blog-post__image">
-        <img src="img/photo-drumset-mobile.jpg" width="280" height="180"
-             alt="Фотография пользователя из социальной сети" class="mobile-photo">
+        <picture>
+          <source media="(min-width: 960px)"
+                  srcset="img/photo-drumset-desktop@1x.jpg 1x, img/photo-drumset-desktop@2x.jpg 2x"
+                  alt="Фотография пользователя">
+          <source media="(min-width: 660px)"
+                  srcset="img/photo-drumset-tablet@1x.jpg 1x, img/photo-drumset-tablet@2x.jpg 2x"
+                  alt="Фотография пользователя">
+          <img src="img/photo-drumset-mobile.jpg"
+               srcset="img/photo-drumset-mobile.jpg 1x, img/photo-drumset-mobile@2x.jpg 2x"
+               alt="Фотография пользователя из социальной сети">
+        </picture>
       </figure>
       <div class="blog-post__body">
         <header class="blog-header">
@@ -119,8 +138,17 @@
     <article class="blog-post">
       <h2 class="visually_hidden">Фотографии пользователей социальной сети</h2>
       <figure class="blog-post__image">
-        <img src="img/photo-window-mobile.jpg" width="280" height="180" alt="Фотография пользователя из социальной сети"
-             class="mobile-photo">
+        <picture>
+          <source media="(min-width: 960px)"
+                  srcset="img/photo-window-desktop@1x.jpg 1x, img/photo-window-desktop@2x.jpg 2x"
+                  alt="Фотография пользователя">
+          <source media="(min-width: 660px)"
+                  srcset="img/photo-window-tablet@1x.jpg 1x, img/photo-window-tablet@2x.jpg 2x"
+                  alt="Фотография пользователя">
+          <img src="img/photo-window-mobile.jpg"
+               srcset="img/photo-window-mobile.jpg 1x, img/photo-window-mobile@2x.jpg 2x"
+               alt="Фотография пользователя из социальной сети">
+        </picture>
       </figure>
       <div class="blog-post__body">
         <header class="blog-header">
@@ -139,8 +167,14 @@
       <h2 class="visually_hidden">Фотограф
         ии пользователей социальной сети</h2>
       <figure class="blog-post__image">
-        <img src="img/photo-fair-mobile.jpg" width="280" height="180" alt="Фотография пользователя из социальной сети"
-             class="mobile-photo">
+        <picture>
+          <source media="(min-width: 960px)" srcset="img/photo-fair-desktop@1x.jpg 1x, img/photo-fair-desktop@2x.jpg 2x"
+                  alt="Фотография пользователя">
+          <source media="(min-width: 660px)" srcset="img/photo-fair-tablet@1x.jpg 1x, img/photo-fair-tablet@2x.jpg 2x"
+                  alt="Фотография пользователя">
+          <img src="img/photo-fair-mobile.jpg" srcset="img/photo-fair-mobile.jpg 1x, img/photo-fair-mobile@2x.jpg 2x"
+               alt="Фотография пользователя из социальной сети">
+        </picture>
       </figure>
       <div class="blog-post__body">
         <header class="blog-header">
@@ -158,8 +192,14 @@
     <article class="blog-post">
       <h2 class="visually_hidden">Фотографии пользователей социальной сети</h2>
       <figure class="blog-post__image">
-        <img src="img/photo-pov-mobile.jpg" width="280" height="180" alt="Фотография пользователя из социальной сети"
-             class="mobile-photo">
+        <picture>
+          <source media="(min-width: 960px)" srcset="img/photo-pov-desktop@1x.jpg 1x, img/photo-pov-desktop@2x.jpg 2x"
+                  alt="Фотография пользователя">
+          <source media="(min-width: 660px)" srcset="img/photo-pov-tablet@1x.jpg 1x, img/photo-pov-tablet@2x.jpg 2x"
+                  alt="Фотография пользователя">
+          <img src="img/photo-road-mobile.jpg" srcset="img/photo-pov-mobile.jpg 1x, img/photo-pov-mobile@2x.jpg 2x"
+               alt="Фотография пользователя из социальной сети">
+        </picture>
       </figure>
       <div class="blog-post__body">
         <header class="blog-header">
@@ -177,8 +217,14 @@
     <article class="blog-post">
       <h2 class="visually_hidden">Фотографии пользователей социальной сети</h2>
       <figure class="blog-post__image">
-        <img src="img/photo-wing-mobile.jpg" width="280" height="180" alt="Фотография пользователя из социальной сети"
-             class="mobile-photo">
+        <picture>
+          <source media="(min-width: 960px)" srcset="img/photo-wing-desktop@1x.jpg 1x, img/photo-wing-desktop@2x.jpg 2x"
+                  alt="Фотография пользователя">
+          <source media="(min-width: 660px)" srcset="img/photo-wing-tablet@1x.jpg 1x, img/photo-wing-tablet@2x.jpg 2x"
+                  alt="Фотография пользователя">
+          <img src="img/photo-wing-mobile.jpg" srcset="img/photo-wing-mobile.jpg 1x, img/photo-wing-mobile@2x.jpg 2x"
+               alt="Фотография пользователя из социальной сети">
+        </picture>
       </figure>
       <div class="blog-post__body">
         <header class="blog-header">
@@ -202,8 +248,14 @@
   <div class="editor-block">
     <div class="wrapper-flex image-editor">
       <div class="image-editor__image-block">
-        <img src="img/photo-road-mobile.jpg" width="280" height="375" alt="Фотография для редактирования"
-             class="mobile-photo">
+        <picture>
+          <source media="(min-width: 960px)" srcset="img/photo-road-desktop@1x.jpg 1x, img/photo-road-desktop@2x.jpg 2x"
+                  alt="Фотография пользователя">
+          <source media="(min-width: 660px)" srcset="img/photo-road-tablet@1x.jpg 1x, img/photo-road-tablet@2x.jpg 2x"
+                  alt="Фотография пользователя">
+          <img src="img/photo-road-mobile.jpg" srcset="img/photo-road-mobile.jpg 1x, img/photo-road-mobile@2x.jpg 2x"
+               alt="Фотография пользователя из социальной сети">
+        </picture>
       </div>
       <div class="image-editor__tools">
         <dl class="image-editor__tools-list">
